# sortedness

./: .gitignore  .sortedness-cache.config.template  .tool-versions  README-edit.md  README.md  build.py  changelog.txt  pyproject.toml  release.sh  setup.py
.github/workflows/: release.yml  test.yml
docs/: agnostic.html  config.html  global.html  global_.html  gtau.html  index.html  kruskal.html  local.html  matrices.html  parallel.html  rank.html  sortedness.html  stress.html  trustworthiness.html
docs/embedding/: index.html  sortedness_.html  surrogate.html  tunning.html
docs/evaluation/: index.html  plot.html
docs/misc/: index.html  matrices.html  parallel.html  trustworthiness.html
docs/wtau/: index.html  wtau.html
examples/: gsortedness.py  max-dists.py  mean-dist.py  plot-dists.py  pwsortedness.py  pwsortedness_.py  rnd-dists.py  sortedness-vs-other-functions.py  sortedness.py  sortedness_.py  visual.py  vs-kruskal.py
experiments/: __init__.py  compare-corrs.py  compare-weighers.py  comparison-tau.py  differentspearman.py  interactive.py  interactive2.py  matrix-traversal.py  rankprediction2.py  rankprediction3.py  sortedness-vs-other-functions.py  timing.py  tnse.py  torchtsne.py  visual.py
experiments/approximate/: probabilistic.py
experiments/distance-free/: ag.py  ag2.py  agnostic.py  gtau.py
experiments/embedding/: animated.py  differentiable-sortedness---warm-start.py  differentiable-sortedness-hyperopt.py  differentiable-sortedness.py  invariant_topology.py  least-squares.py  optimize-sortedness--weights-are-coords.py  sorted_topology.py
experiments/embedding/draft/: compare-correlation-measures.py  differentspearman.py  least-squares-optimizing-sortedness.py  surrogate.py  weighted-spearman.py
experiments/embedding/other/: autoencoder-optimize-distance.py  correlation-coefficients-comparison.py  optimize-directly-distances--weights-are-coords.py  optmize-directly-the-distances.py  rankprediction-or-autoencoder.py  wtau-distribution.py
experiments/global/: increasing-clusters2.py
experiments/interactive/: manually-distorted-plot.py
experiments/intrinsic-dimensionality/: least-squares-polar.py  least-squares.py  minimize-polar.py
experiments/intrinsic_dimensionality/: least-squares.py
experiments/local/: shuffling-points.py
experiments/new/: calmness.py  plot.py
experiments/other/: jax_.py  plot-dissimilarity.py  sorting.py  sympy_.py  timing-nlon-torch-n2.py
experiments/paper2023-eurovis/global/: increasing-clusters.py
experiments/paper2023-eurovis/local/: boxplot---shuffling-points.py  increasing-gaussian-noise.py  shuffling-points.py  single-point-translation-on-a-line.py
experiments/paper2024/: find-sigmas.py  optunazation-best-to-csv.py  optunazation-from-hyperopt.py  optunazation-many-reductors.py  optunazation-plot.py  optunazation.py  proj_sortedness.py  proj_sortedness_effect_of_changing_parameters.py
experiments/paper2024/distill/: demo-datas.py
experiments/paper2024/evaluation/: evaluation-figures.py  evaluation-utils.py  run-evaluation.py
experiments/paper2024/results/: boxplot---18-datasets.py  boxplot.py  grid-of-spirals.py
experiments/reductor/: differentiable-sortedness---warm-start.py  differentiable-sortedness-hyperopt.py  differentiable-sortedness.py  optimize-sortedness--weights-are-coords.py
experiments/reductor/draft/: compare-correlation-measures.py  least-squares-optimizing-sortedness.py  weighted-spearman---torch.py
experiments/reductor/other/: optimize-directly-distances--weights-are-coords.py  optmize-directly-the-distances.py  rankprediction-or-autoencoder.py
experiments/timing/draft/: timing.py
src/evaluation/: plot.py
src/robustress/: kruskal.py  main.py  rank.py  sortedness.py  stress.py
src/sortedness/: __init__.py  balanced.py  config.py  global.py  global_.py  kruskal.py  local.py  parallel.py  rank.py  trustworthiness.py
src/sortedness/embedding/: __init__.py  agrad.py  optimization.py  sigmas.py  sigmas_.py  sortedness_.py  surrogate.py  tnse.py  tunning.py  wcorr.py  wcorrtorch.py
src/sortedness/evaluation/: plot.py
src/sortedness/misc/: dataset.py  dissimilarity.py  matrices.py  parallel.py  trustworthiness.py
src/sortedness/new/: dataset.py  dt.py  m.py  math.py  math_functions.py  sktransformer.py  softtau.py  softtau_ite.py  softtau_rec.py  softtau_rec_idx.py  stats.py  tau.py  tau2.py  transformation.py  weighting.py  wsofttau_ite_idx-torch.py  wsofttau_ite_idx.py  wsofttau_ite_idx_torch.py  wsofttau_rec_idx.py
src/sortedness/new/quality/: __init__.py  _calmness.py  _elementwise.py  _klconcordance.py  _linearity.py  _nodist.py  _pairwise.py  _relativecalmness.py  _sortedness.py  _transitiveness.py  abs.py
src/sortedness/new/quality/measure/: __init__.py  elementwise.py  pairwise.py
src/sortedness/wtau/: __init__.py  wtau.c  wtau.html  wtau.pyx
tests/: test_robustress1.py
