[tool.poetry]
name = "sortedness"
version = "1.230724.0"
description = "Measures of projection quality"
authors = ["davips <dpsabc@gmail.com>", "tacito <tacito.neves@gmail.com>"]
license = "GPLv3"
build = "build.py"  # For Cython. apt-get package needed: python3-numpy
readme = 'README.md'
packages = [
    { include = "sortedness", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
scipy = {version = "^1.10.1", python = ">=3.8,<3.11"}
lange = "^1.230203.1"
pathos = "^0.3.0"
torchmetrics = "^1.0.3"
hdict = "^2.230721.3"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.2"
Cython = "^0.29.27"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
pdoc3 = "^0.10.0"
autoreadme = "^0.2302.3"
scikit-learn = "^1.2.2"
numpy = "^1.24.2"  #=1.24.2
matplotlib = "^3.7.2"
pandas = "^2.0.3"
#glass = "^2023.6"
#nmslib = "^2.1.1"
#llvmlite = "^0.40.1"
#pynndescent = "^0.5.10"
#tbb = "^2021.10.0"
shelchemy = "^2.230727.3"
hdict = "^2.230721.3"
safeserializer = "^0.230202.1"
lz4 = "^4.3.2"
#rtree = "^1.0.1"
#duckdb-engine = "^0.9.2"
#duckdb = "^0.8.1"
#pyflann-ibeis = "^2.3.0"
#annoy = "^1.17.3"
#torch = "^2.0.1"
scipy = "^1.11.1"
#torchsample = "^0.1.0"
#wcorr = "^2.2"
pip = "^23.2.1"
duckdb-engine = "^0.9.2"

#[[tool.poetry.source]]
#name = "torch"
#url = "https://download.pytorch.org/whl/cu122"
#priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython>=0.29.27", "setuptools>=60.8.1", "numpy>=1.23.3", "scipy>=1.10.1"]
build-backend = "poetry.core.masonry.api"
