[tool.poetry]
name = "sortedness"
version = "3.231113.0"
description = "Measures of projection quality"
authors = ["davips <dpsabc@gmail.com>", "tacito <tacito.neves@gmail.com>"]
license = "GPLv3"
build = "build.py"  # For Cython. apt-get package needed: python3-numpy
readme = 'README.md'
packages = [
    { include = "sortedness", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
scipy = "^1.11.2"
lange = "^1.230203.1"
pathos = "^0.3.0"
pyqt6 = "^6.6.0"

[tool.poetry.group.dev.dependencies]
#  todo: all dev deps should he hidden from the normal library usage. e.g.: torch, Cython should only be imported by functions that use them
setuptools = "^67.7.2"
Cython = "^0.29.27"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
pdoc3 = "^0.10.0"
autoreadme = "^0.2302.3"
scikit-learn = "^1.2.2"
numpy = "^1.24.2"  #=1.24.2
matplotlib = "^3.7.2"
pandas = "^2.0.3"
shelchemy = "^2.231111.1"
hdict = "^2.240217.0"
safeserializer = "^0.230202.1"
lz4 = "^4.3.2"
pip = "^23.2.1"
duckdb-engine = "^0.9.2"
seaborn = "^0.12.2"
llvmlite = "^0.41.0"
umap-learn = {extras = ["plot"], version = "^0.5.4"}
tsne-torch = "^1.0.1"
torch = {version = "^2.1.0+cpu", source = "torchcpu1130"}
sympy = "^1.12"
hyperopt = "^0.2.7"
pymysql = "^1.1.0"
ipython = "^8.17.2"
argvsucks = "^0.230725.7"
optuna = "^3.4.0"
plotly = "^5.18.0"
gradient-descent-the-ultimate-optimizer = "^1.0"
som-pbc = "^1.0.2"
liac-arff = "^2.5.0"
jax = {extras = ["cpu"], version = "^0.4.28"}

[[tool.poetry.source]]
name = "torchcpu1130"
url = "https://download.pytorch.org/whl/cpu/"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython>=0.29.27", "setuptools>=60.8.1", "numpy>=1.23.3", "scipy>=1.10.1"]
build-backend = "poetry.core.masonry.api"
